--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ailabel": "^5.1.15",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
